--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -12,9 +12,9 @@
 @import "multiselect";
 
 /* Containers */
-.container {
-  @apply max-w-7xl mx-auto;
-}
+// .container {
+//   @apply max-w-7xl mx-auto;
+// }
 
 /* Titles */
 .title {
