Add review likes/dislikes

--- a/src/assets/styles/buttons.scss
+++ b/src/assets/styles/buttons.scss
@@ -83,3 +83,12 @@
 .button-white:focus {
   @apply outline-none border-blue-300 shadow-outline;
 }
+
+
+/* Sentiment Button */
+.button-sentiment {
+  @apply bg-white text-gray-700 border-gray-300 ;
+}
+.button-sentiment:focus {
+  @apply outline-none;
+}
