--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -74,6 +74,9 @@
 .markdown>p {
   @apply mb-5
 }
+.markdown>p:last-child {
+  @apply mb-0
+}
 
 .mako-shadow {
   box-shadow: inset 0 -30px 0 #00D1B2;
