--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -59,6 +59,10 @@
   @apply inline-block rounded px-2.5 py-0.5 text-xs text-gray-700 bg-gray-200 font-medium;
 }
 
+.tag:hover {
+  @apply underline;
+}
+
 
 /* Simple Modifiers */
 .is-primary {
@@ -70,6 +74,9 @@
 .is-dark {
   @apply bg-gray-800 text-white
 }
+.is-info {
+  @apply bg-info text-white
+}
 
 .markdown>p {
   @apply mb-5
@@ -80,6 +87,22 @@
 
 .mako-shadow {
   box-shadow: inset 0 -30px 0 #00D1B2;
+}
+
+/* Forum Tag */
+.forum-tag {
+  @apply px-4 py-1.5 rounded block;
+}
+.forum-tag:hover {
+  @apply bg-gray-100;
+}
+
+/* Active Forum Tag */
+.forum-tag.is-active {
+  @apply bg-primary text-white;
+}
+.forum-tag.is-active:hover {
+  @apply bg-primary text-white;
 }
 @import "tailwindcss/utilities";
 @import "~balloon-css/src/balloon";
