--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -26,7 +26,7 @@
   @apply text-primary font-medium leading-5 transition duration-150 ease-in-out;
 }
 .is-link:hover {
-  @apply text-secondary;
+  @apply text-secondary cursor-pointer;
 }
 .is-link:focus {
   @apply outline-none underline;
